<resources>
    <string name="app_name" translatable="false">Play market clone</string>

    <string name="title_games">Games</string>
    <string name="title_apps">Apps</string>
    <string name="title_movies">Movies</string>
    <string name="title_books">Books</string>

    <string name="app_language_en">English</string>
    <string name="app_language_ru">Russian</string>
    <string name="app_language_uz">Uzbek</string>

    <string name="lan_english" translatable="false">English</string>
    <string name="lan_russian" translatable="false">Русский</string>
    <string name="lan_uzbek" translatable="false">O\'zbekcha</string>
    <string name="mode_night" translatable="false">Night mode</string>
    <string name="mode_light" translatable="false">Light mode</string>
    <string name="mode_red" translatable="false">Red mode</string>

    <string name="en">en</string>
    <string name="ru">ru</string>
    <string name="uz">uz</string>

    <string name="title_change_language">Change language</string>
    <string name="title_change_theme">Change theme</string>

    <string name="hint_search_games">Search for games</string>
    <string name="hint_search_apps">Search for apps</string>
    <string name="hint_search_movies">Search for movies</string>
    <string name="hint_search_books">Search for books</string>

    <string name="settings">Settings</string>

    <string name="text_night_mode">Night mode</string>
    <string name="text_light_mode">Light mode</string>
    <string name="text_red_mode">Red mode</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_for_you">For you</string>
    <string name="title_top_charts">Top charts</string>
    <string name="title_children">Children</string>
    <string name="title_premium">Premium</string>
    <string name="title_categories">Categories</string>
    <string name="title_editors_choice">Editors\' Choice</string>
</resources>