<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bottom_dialog_background">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_language_en"
        android:textColor="?attr/text_color"
        android:textSize="19sp"
        app:fontFamily="@font/nexa_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_english"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/ripple_effect_settings"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_english"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_check_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/view_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_english"
        app:srcCompat="@drawable/ic_check" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_russian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_language_ru"
        android:textColor="?attr/text_color"
        android:textSize="19sp"
        app:fontFamily="@font/nexa_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_english" />

    <View
        android:id="@+id/view_russian"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/ripple_effect_settings"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_russian"
        app:layout_constraintTop_toBottomOf="@+id/view_english" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_check_russian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/view_russian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_russian"
        app:srcCompat="@drawable/ic_check" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_uzbek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_language_uz"
        android:textColor="?attr/text_color"
        android:textSize="19sp"
        app:fontFamily="@font/nexa_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_russian" />

    <View
        android:id="@+id/view_uzbek"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/ripple_effect_settings"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_uzbek"
        app:layout_constraintTop_toBottomOf="@+id/view_russian" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_check_uzbek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/view_uzbek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view_uzbek"
        app:srcCompat="@drawable/ic_check" />

</androidx.constraintlayout.widget.ConstraintLayout>